--- a/src/scss/variables/colors.scss
+++ b/src/scss/variables/colors.scss
@@ -182,9 +182,9 @@
   --kd-color-background-secondary: var(--kd-color-darkstone-80);
   --kd-color-background-secondary-hover: var(--kd-color-darkstone-60);
   --kd-color-background-secondary-pressed: var(--kd-color-darkstone-100);
-  --kd-color-background-destructive: var(--kd-color-warmred-70);
-  --kd-color-background-destructive-hover: var(--kd-color-warmred-60);
-  --kd-color-background-destructive-pressed: var(--kd-color-warmred-80);
+  --kd-color-background-destructive: var(--kd-color-warmred-80);
+  --kd-color-background-destructive-hover: var(--kd-color-warmred-70);
+  --kd-color-background-destructive-pressed: var(--kd-color-warmred-90);
   --kd-color-background-focus: var(--kd-color-spruce-60);
   --kd-color-background-inverse: var(--kd-color-neutral-white);
   --kd-color-background-inverse-hover: var(--kd-color-spruce-10);
